[package]
name = "libp2p_distributed_data_store"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
libp2p = { version = "0.54", features = [
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
